[package]
name = "cache-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
dashmap = { version = "7.0.0-rc1", features = ["all"] }
quick_cache = "0.6.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
actix-web = "4.9.0"
serde = "1.0.218"
serde_json = "1.0.140"
